Closed Bug 755239 Opened 12 years ago Closed 12 years ago

strsclnt password options (-w / -W) are broken

Categories

(NSS :: Tools, defect, P2)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: KaiE, Assigned: KaiE)

References

Details

Attachments

(1 file)

Today, some of strsclnt test runs on the NSS build slaves on tinderbox fail:

- some are stuck 
  (with a prompt "enter password for fips db",
   if tests were started in a "screen" session)

- some are failing tests
  (with message "Error opening input terminal for read",
   if tests were run in the background without a terminal)

I can reproduce the "stuck" failure on my local Linux computer.


When running the affected tool interactively, I learned that the reason is, that the "-w nss" option given to strsclnt has no effect.

This scenario has probably not been tested before. 
I think the fix for bug 755108 enabled this test.


Looking at source for both tstclnt and strsclnt, I see that tstclnt calls SSL_SetPKCS11PinArg, but strsclnt does not.
Depends on: 755108
Attached patch Patch v1Splinter Review
Given that we have a bustage on tinderbox, and given this is an obvious fix, with code copied from tstclnt, I'm checking this in now (rather than backing out 755108).
Assignee: nobody → kaie
Attachment #623999 - Flags: review?(rrelyea)
Checking in strsclnt.c;
/cvsroot/mozilla/security/nss/cmd/strsclnt/strsclnt.c,v  <--  strsclnt.c
new revision: 1.72; previous revision: 1.71
done
Comment on attachment 623999 [details] [diff] [review]
Patch v1

r=wtc.
Attachment #623999 - Flags: review+
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → 3.14
Attachment #623999 - Flags: review?(rrelyea)
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: