Bug 755239, attempted bustage fix for test failures triggered by bug 755108, checking in without review because of attempted bustage fix